samples/_failures_safe/1761183236_49a313_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_43b51011.c: In function ‘main’:
./samples/SAFE/__tmp_43b51011.c:149:26: error: missing terminating " character
  149 |     int rows2 = read_int("Enter rows for
      |                          ^~~~~~~~~~~~~~~
./samples/SAFE/__tmp_43b51011.c:149:5: error: expected expression at end of input
  149 |     int rows2 = read_int("Enter rows for
      |     ^~~
./samples/SAFE/__tmp_43b51011.c:149:17: error: too few arguments to function ‘read_int’
  149 |     int rows2 = read_int("Enter rows for
      |                 ^~~~~~~~
./samples/SAFE/__tmp_43b51011.c:16:5: note: declared here
   16 | int read_int(const char* prompt, int min, int max) {
      |     ^~~~~~~~
./samples/SAFE/__tmp_43b51011.c:149:5: error: expected declaration or statement at end of input
  149 |     int rows2 = read_int("Enter rows for
      |     ^~~
